don't call First() on an empty string. b=326874 r=mento